--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.reservation.myapplication">
+    package="com.reservation.myapplication" >
 
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar" >
+        <activity
+            android:name=".homepop"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.DayNight.Dialog"/>
 
-        <activity android:name="com.reservation.myapplication.MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +24,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.reservation.myapplication.ReserveActivity"/>
-        <activity android:name="com.reservation.myapplication.CheckActivity"/>
-        <activity android:name=".HomeserviceActivity"/>
+        <activity android:name=".ReserveActivity" />
+        <activity android:name=".CheckActivity" />
+        <activity android:name=".HomeserviceActivity" />
     </application>
 
 </manifest>
