--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.reservation.myapplication"
+        applicationId "com.reservation.saintapl"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
